--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,18 @@
 name: credit_card
 description: Cool Credit card widget
 version: 0.1.6
-author: Laxman Bhattarai <erluxman@gmail.com>
-homepage: https://github.com/erluxman
-issue_tracker: https://github.com/erluxman
+author: Žiga Povhe <ziga@povhe.si>
+homepage: https://github.com/zigapovhe
+issue_tracker: https://github.com/zigapovhe
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_svg: ^0.19.2+1
   flutter:
     sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +27,7 @@ flutter:
 
   # To add assets to your package, add an assets section, like this:
   assets:
-    - icons/
+    - assets/
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
