--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: credit_card
 description: Cool Credit card widget
-version: 0.1.6
+version: 0.2.0-nullsafety.0
 author: Žiga Povhe <ziga@povhe.si>
 homepage: https://github.com/zigapovhe
 issue_tracker: https://github.com/zigapovhe
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-259.9.beta <3.0.0'
 
 dependencies:
-  flutter_svg: ^0.19.2+1
+  flutter_svg: ^0.20.0-nullsafety.3
   flutter:
     sdk: flutter
 
@@ -17,7 +17,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  cached_network_image: ^1.1.1
+  test: ^1.16.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
