--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
   sdk: '>=2.12.0-259.9.beta <3.0.0'
 
 dependencies:
+  auto_size_text: ^3.0.0-nullsafety.0
   flutter_svg: ^0.21.0-nullsafety.0
+
   flutter:
     sdk: flutter
 
